--- a/app/admin-projects.html
+++ b/app/admin-projects.html
@@ -22,6 +22,7 @@
       <section class="panel">
         <div class="admin-controls">
           <input id="projectSearch" class="project-search" type="search" placeholder="Search by client name or SF ID..." oninput="renderTables()" />
+
           <div class="status-multiselect" id="statusFilterControl">
             <button type="button" id="statusFilterToggle" class="project-filter status-toggle" onclick="togglePanel('statusFilterPanel')">All statuses</button>
             <div id="statusFilterPanel" class="status-filter-panel" hidden>
@@ -32,6 +33,7 @@
               </div>
             </div>
           </div>
+
           <div class="status-multiselect" id="leadFilterControl">
             <button type="button" id="leadFilterToggle" class="project-filter status-toggle" onclick="togglePanel('leadFilterPanel')">All project leads</button>
             <div id="leadFilterPanel" class="status-filter-panel" hidden>
@@ -42,99 +44,229 @@
               </div>
             </div>
           </div>
+
           <a class="project-filter refresh-link" id="refreshLink" href="#">Refresh From ClickUp</a>
         </div>
       </section>
 
       <section class="panel">
         <h2 id="activeHeader">Active Projects (0)</h2>
+        <p class="admin-summary" id="activeSummary"></p>
         <div id="activeGroups"></div>
       </section>
 
       <section class="panel">
         <h2 id="completedHeader">Completed Projects (0)</h2>
+        <p class="admin-summary" id="completedSummary"></p>
         <div id="completedGroups"></div>
       </section>
     </main>
 
     <script>
-      const q = new URLSearchParams(location.search);
-      const key = q.get('key') || '';
+      const qp = new URLSearchParams(location.search);
+      const key = qp.get('key') || '';
       const FILTER_KEY = 'medcurity_admin_filters_v2';
       let projects = [];
 
-      function esc(v){return String(v||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));}
-      function norm(v){return String(v||'').trim().toLowerCase();}
-      function parseUS(s){const m=String(s||'').match(/^(\d{2})\/(\d{2})\/(\d{4})$/);if(!m)return null;return new Date(+m[3],+m[1]-1,+m[2]);}
-      function quarterLabel(d){if(!d)return 'No Date';const q=Math.floor(d.getMonth()/3)+1;return `${d.getFullYear()} Q${q}`;}
+      function esc(v) { return String(v || '').replace(/[&<>"']/g, (m) => ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[m])); }
+      function norm(v) { return String(v || '').trim().toLowerCase(); }
 
-      function selected(groupId){return Array.from(document.querySelectorAll(`#${groupId} input:checked`)).map(x=>norm(x.value));}
-      function saveFilters(){localStorage.setItem(FILTER_KEY,JSON.stringify({search:document.getElementById('projectSearch').value||'',statuses:selected('statusFilter'),leads:selected('leadFilter')}));}
-      function loadFilters(){try{const s=JSON.parse(localStorage.getItem(FILTER_KEY)||'{}');if(s.search)document.getElementById('projectSearch').value=s.search;return s;}catch{return {}}}
-      function togglePanel(id){const p=document.getElementById(id);p.hidden=!p.hidden;}
-      function closePanel(id){document.getElementById(id).hidden=true;}
-      function clearGroup(id){document.querySelectorAll(`#${id} input`).forEach(x=>x.checked=false);renderTables();}
-
-      function buildFilterOptions(id, values){
-        const host=document.getElementById(id);
-        host.innerHTML=values.map(v=>`<label class="status-filter-option"><input type="checkbox" value="${esc(v)}" onchange="renderTables()"><span>${esc(v)}</span></label>`).join('');
+      function parseUS(value) {
+        const m = String(value || '').match(/^(\d{2})\/(\d{2})\/(\d{4})$/);
+        if (!m) return null;
+        return new Date(Number(m[3]), Number(m[1]) - 1, Number(m[2]));
       }
 
-      function renderGroup(hostId, rows){
-        const host=document.getElementById(hostId);
-        const grouped={};
-        rows.forEach(r=>{const dt=parseUS(r.task_closed_at||r.task_created_at);const key=quarterLabel(dt);(grouped[key]=grouped[key]||[]).push(r);});
-        const keys=Object.keys(grouped).sort();
-        host.innerHTML=keys.map(k=>`<h3 class="admin-period">${esc(k)}</h3><table class="admin-table projectsTable"><thead><tr><th>Client</th><th>SF ID</th><th>Project Lead</th><th>Status</th><th>Start Date</th><th>Completed Date</th></tr></thead><tbody>${grouped[k].map(p=>`<tr><td><a href="/status?sf_id=${encodeURIComponent(p.sf_id)}&sig=${encodeURIComponent(p.link_sig)}&key=${encodeURIComponent(key)}&mode=admin">${esc(p.task_name)}</a></td><td>${esc(p.sf_id)}</td><td>${esc(p.project_lead||'Not assigned')}</td><td>${esc(p.task_status||'')}</td><td>${esc(p.task_created_at||'-')}</td><td>${esc(p.task_closed_at||'-')}</td></tr>`).join('')}</tbody></table>`).join('') || '<p class="admin-empty">No projects.</p>';
+      function quarterLabel(d) {
+        if (!d || Number.isNaN(d.getTime())) return 'No Date';
+        const q = Math.floor(d.getMonth() / 3) + 1;
+        return `${d.getFullYear()} Q${q}`;
       }
 
-      function renderTables(){
-        const query=norm(document.getElementById('projectSearch').value);
-        const statusSel=selected('statusFilter');
-        const leadSel=selected('leadFilter');
-        const filtered=projects.filter(p=>{
-          const text=norm(`${p.task_name} ${p.sf_id}`);
-          if(query && !text.includes(query)) return false;
-          if(statusSel.length && !statusSel.includes(norm(p.task_status))) return false;
-          if(leadSel.length && !leadSel.includes(norm(p.project_lead))) return false;
-          return true;
-        });
-
-        const active=filtered.filter(p=>norm(p.task_status)!=='completed');
-        const completed=filtered.filter(p=>norm(p.task_status)==='completed');
-        document.getElementById('activeHeader').textContent=`Active Projects (${active.length})`;
-        document.getElementById('completedHeader').textContent=`Completed Projects (${completed.length})`;
-        renderGroup('activeGroups', active);
-        renderGroup('completedGroups', completed);
-
-        document.getElementById('statusFilterToggle').textContent=statusSel.length?`${statusSel.length} selected`:'All statuses';
-        document.getElementById('leadFilterToggle').textContent=leadSel.length?`${leadSel.length} selected`:'All project leads';
-        saveFilters();
+      function selected(groupId) {
+        return Array.from(document.querySelectorAll(`#${groupId} input[type='checkbox']:checked`)).map((x) => norm(x.value));
       }
 
-      async function load(){
-        document.getElementById('projectsLink').href=`/admin/projects?key=${encodeURIComponent(key)}`;
-        document.getElementById('metricsLink').href=`/admin/metrics?key=${encodeURIComponent(key)}`;
-        document.getElementById('refreshLink').href=`/admin/projects?key=${encodeURIComponent(key)}`;
-        const res=await fetch(`/api/projects?key=${encodeURIComponent(key)}`);
-        const data=await res.json();
-        projects=data.projects||[];
-        document.getElementById('countLabel').textContent=`${projects.length} clients`;
-        const statuses=[...new Set(projects.map(p=>p.task_status).filter(Boolean))].sort();
-        const leads=[...new Set(projects.map(p=>p.project_lead).filter(Boolean))].sort();
-        buildFilterOptions('statusFilter', statuses);
-        buildFilterOptions('leadFilter', leads);
-        const saved=loadFilters();
-        if(saved.statuses) document.querySelectorAll('#statusFilter input').forEach(x=>x.checked=saved.statuses.includes(norm(x.value)));
-        if(saved.leads) document.querySelectorAll('#leadFilter input').forEach(x=>x.checked=saved.leads.includes(norm(x.value)));
+      function saveFilters() {
+        const state = {
+          search: (document.getElementById('projectSearch') || {}).value || '',
+          statuses: selected('statusFilter'),
+          leads: selected('leadFilter')
+        };
+        try { localStorage.setItem(FILTER_KEY, JSON.stringify(state)); } catch (_) {}
+      }
+
+      function loadFilters() {
+        try {
+          const raw = localStorage.getItem(FILTER_KEY) || '';
+          if (!raw) return {};
+          const parsed = JSON.parse(raw);
+          return parsed && typeof parsed === 'object' ? parsed : {};
+        } catch (_) {
+          return {};
+        }
+      }
+
+      function togglePanel(id) {
+        const panel = document.getElementById(id);
+        if (!panel) return;
+        panel.hidden = !panel.hidden;
+      }
+
+      function closePanel(id) {
+        const panel = document.getElementById(id);
+        if (panel) panel.hidden = true;
+      }
+
+      function clearGroup(id) {
+        document.querySelectorAll(`#${id} input[type='checkbox']`).forEach((x) => { x.checked = false; });
         renderTables();
       }
 
-      document.addEventListener('click',(e)=>{
-        ['statusFilterControl','leadFilterControl'].forEach(id=>{const c=document.getElementById(id);if(c && !c.contains(e.target)){const p=c.querySelector('.status-filter-panel');if(p)p.hidden=true;}});
+      function updateToggleLabel(toggleId, values, emptyText) {
+        const el = document.getElementById(toggleId);
+        if (!el) return;
+        el.textContent = values.length === 0 ? emptyText : `${values.length} selected`;
+      }
+
+      function buildFilterOptions(groupId, values) {
+        const host = document.getElementById(groupId);
+        host.innerHTML = values.map((v) => `<label class="status-filter-option"><input type="checkbox" value="${esc(v)}" onchange="renderTables()" /><span>${esc(v)}</span></label>`).join('');
+      }
+
+      function buildSummary(hostId, rows) {
+        const counts = {};
+        rows.forEach((row) => {
+          const s = row.task_status || 'Unknown';
+          counts[s] = (counts[s] || 0) + 1;
+        });
+        const host = document.getElementById(hostId);
+        host.innerHTML = Object.keys(counts).sort().map((name) => `<span class="summary-pill">${esc(name)}: ${counts[name]}</span>`).join('');
+      }
+
+      function renderGroupedTables(hostId, rows) {
+        const grouped = {};
+        rows.forEach((row) => {
+          const anchor = row._bucketDate;
+          const q = quarterLabel(anchor);
+          if (!grouped[q]) grouped[q] = [];
+          grouped[q].push(row);
+        });
+
+        const keys = Object.keys(grouped).sort();
+        const host = document.getElementById(hostId);
+        host.innerHTML = keys.map((quarter) => {
+          const items = grouped[quarter];
+          const body = items.map((p) => {
+            const link = `/status?sf_id=${encodeURIComponent(p.sf_id)}&sig=${encodeURIComponent(p.link_sig)}&mode=admin&key=${encodeURIComponent(key)}`;
+            return `<tr>
+              <td><a href="${link}">${esc(p.task_name)}</a></td>
+              <td>${esc(p.sf_id)}</td>
+              <td>${esc(p.project_lead || 'Not assigned')}</td>
+              <td>${esc(p.project_support || '-')}</td>
+              <td>${esc(p.task_status || '')}</td>
+              <td>${esc(p.task_created_at || '-')}</td>
+              <td>${esc(p.task_closed_at || '-')}</td>
+            </tr>`;
+          }).join('');
+
+          return `<h3 class="admin-period">${esc(quarter)} (${items.length})</h3>
+            <table class="admin-table">
+              <thead>
+                <tr>
+                  <th>Client</th>
+                  <th>SF ID</th>
+                  <th>Project Lead</th>
+                  <th>Project Support</th>
+                  <th>Status</th>
+                  <th>Start Date</th>
+                  <th>Completed Date</th>
+                </tr>
+              </thead>
+              <tbody>${body}</tbody>
+            </table>`;
+        }).join('') || '<p class="admin-empty">No projects.</p>';
+      }
+
+      function renderTables() {
+        const query = norm((document.getElementById('projectSearch') || {}).value || '');
+        const statuses = selected('statusFilter');
+        const leads = selected('leadFilter');
+
+        const filtered = projects.filter((p) => {
+          const text = norm(`${p.task_name} ${p.sf_id}`);
+          if (query && !text.includes(query)) return false;
+          if (statuses.length && !statuses.includes(norm(p.task_status))) return false;
+          if (leads.length && !leads.includes(norm(p.project_lead))) return false;
+          return true;
+        });
+
+        const active = [];
+        const completed = [];
+
+        filtered.forEach((p) => {
+          const isCompleted = norm(p.task_status) === 'completed';
+          const created = parseUS(p.task_created_at);
+          const closed = parseUS(p.task_closed_at);
+          const row = { ...p, _bucketDate: isCompleted ? (closed || created) : created };
+          if (isCompleted) completed.push(row); else active.push(row);
+        });
+
+        document.getElementById('activeHeader').textContent = `Active Projects (${active.length})`;
+        document.getElementById('completedHeader').textContent = `Completed Projects (${completed.length})`;
+
+        buildSummary('activeSummary', active);
+        buildSummary('completedSummary', completed);
+        renderGroupedTables('activeGroups', active);
+        renderGroupedTables('completedGroups', completed);
+
+        updateToggleLabel('statusFilterToggle', statuses, 'All statuses');
+        updateToggleLabel('leadFilterToggle', leads, 'All project leads');
+        saveFilters();
+      }
+
+      async function init() {
+        document.getElementById('projectsLink').href = `/admin/projects?key=${encodeURIComponent(key)}`;
+        document.getElementById('metricsLink').href = `/admin/metrics?key=${encodeURIComponent(key)}`;
+        document.getElementById('refreshLink').href = `/admin/projects?key=${encodeURIComponent(key)}`;
+
+        const res = await fetch(`/api/projects?key=${encodeURIComponent(key)}`);
+        const data = await res.json().catch(() => ({}));
+        if (!res.ok) throw new Error(data.detail || data.error || `Load failed (${res.status})`);
+
+        projects = data.projects || [];
+        document.getElementById('countLabel').textContent = `${projects.length} clients`;
+
+        const allStatuses = [...new Set(projects.map((p) => p.task_status).filter(Boolean))].sort();
+        const allLeads = [...new Set(projects.map((p) => p.project_lead).filter(Boolean))].sort();
+        buildFilterOptions('statusFilter', allStatuses);
+        buildFilterOptions('leadFilter', allLeads);
+
+        const saved = loadFilters();
+        if (typeof saved.search === 'string') {
+          document.getElementById('projectSearch').value = saved.search;
+        }
+        const statusSet = new Set(saved.statuses || []);
+        const leadSet = new Set(saved.leads || []);
+
+        document.querySelectorAll('#statusFilter input[type="checkbox"]').forEach((x) => { x.checked = statusSet.has(norm(x.value)); });
+        document.querySelectorAll('#leadFilter input[type="checkbox"]').forEach((x) => { x.checked = leadSet.has(norm(x.value)); });
+
+        renderTables();
+      }
+
+      document.addEventListener('click', (evt) => {
+        ['statusFilterControl', 'leadFilterControl'].forEach((id) => {
+          const box = document.getElementById(id);
+          if (!box || box.contains(evt.target)) return;
+          const panel = box.querySelector('.status-filter-panel');
+          if (panel) panel.hidden = true;
+        });
       });
 
-      load().catch(err=>{document.body.innerHTML=`<main class="page"><section class="panel"><h2>Load failed</h2><p>${esc(err.message||err)}</p></section></main>`;});
+      init().catch((err) => {
+        document.body.innerHTML = `<main class="page"><section class="panel"><h2>Load failed</h2><p>${esc(err.message || err)}</p></section></main>`;
+      });
     </script>
   </body>
 </html>
