--- a/app/status.html
+++ b/app/status.html
@@ -10,6 +10,7 @@
     <aside class="admin-side-menu" id="adminMenu" style="display:none;">
       <h3>Admin Menu</h3>
       <a class="admin-nav-link" id="backAdmin" href="#">Back to Admin Dashboard</a>
+      <a class="admin-nav-link" id="viewToggle" href="#" style="display:none;">View as Client</a>
     </aside>
 
     <main class="page">
@@ -32,21 +33,27 @@
         <div class="step-grid" id="nvaSteps"></div>
       </article>
 
+      <section class="panel" id="extraPanel" style="display:none;">
+        <h2>Additional Metrics</h2>
+        <div class="extra-grid" id="extraMetrics"></div>
+      </section>
+
       <section class="meta" id="meta"></section>
     </main>
 
     <script>
-      const q = new URLSearchParams(location.search);
-      const sf = q.get('sf_id') || '';
-      const sig = q.get('sig') || '';
-      const key = q.get('key') || '';
-      const mode = (q.get('mode') || '').toLowerCase();
+      const qp = new URLSearchParams(location.search);
+      const sfId = qp.get('sf_id') || '';
+      const sig = qp.get('sig') || '';
+      const key = qp.get('key') || '';
+      const mode = (qp.get('mode') || '').toLowerCase();
+      const canEdit = mode === 'admin' && !!key;
 
       function esc(value) {
         return String(value || '').replace(/[&<>"']/g, (m) => ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[m]));
       }
 
-      function detailIcon(label) {
+      function iconForLabel(label) {
         if (['ECD', 'ACD', 'Contract Signed'].includes(label)) return '<span class="label-icon icon-calendar" aria-hidden="true"></span>';
         if (label === 'Location') return '<span class="label-icon icon-location" aria-hidden="true"></span>';
         if (['Project Lead', 'Project Support'].includes(label)) return '<span class="label-icon icon-user" aria-hidden="true"></span>';
@@ -54,73 +61,222 @@
         return '';
       }
 
-      function renderStep(stepName, data) {
-        const extras = (data.extras || []).map((x) => `<p><span class="label">${esc(x.label)}:</span> <span class="value">${esc(x.value || 'Not set')}</span></p>`).join('');
-        return `
-          <section class="step-card">
-            <h3>${esc(stepName)}</h3>
-            <div class="step-fields">
-              <div class="step-row two-col">
-                <p><span class="label">Status:</span> <span class="value status-pill ${esc(data.status_class || 'status-pill-neutral')}">${esc(data.status || 'Not set')}</span></p>
-                <p><span class="label">Owner:</span> <span class="value">${esc(data.Owner || data.owner || 'Not assigned')}</span></p>
-              </div>
-              <div class="step-row two-col">
-                <p><span class="label">ECD:</span> <span class="value">${esc((data.ECD || data.ecd?.value || 'Not set'))}</span></p>
-                <p><span class="label">ACD:</span> <span class="value">${esc((data.ACD || data.acd?.value || 'Not set'))}</span></p>
-              </div>
-              ${extras}
-            </div>
-          </section>`;
+      function closeDateEditors() {
+        document.querySelectorAll('.date-inline.editing').forEach((node) => node.classList.remove('editing'));
       }
 
-      async function load() {
-        if (!sf || !sig) {
+      function closeChoices() {
+        document.querySelectorAll('.acd-choice.show').forEach((node) => node.classList.remove('show'));
+      }
+
+      function openDateEditor(rowId) {
+        closeDateEditors();
+        const row = document.getElementById(rowId);
+        if (!row) return;
+        row.classList.add('editing');
+        const input = row.querySelector('input[type="date"]');
+        if (input) {
+          input.focus();
+          if (typeof input.showPicker === 'function') input.showPicker();
+        }
+      }
+
+      function hideRowEditor(rowId) {
+        const row = document.getElementById(rowId);
+        if (row) row.classList.remove('editing');
+      }
+
+      async function sendUpdate(form, adjustFollowing) {
+        const metricKey = form.dataset.metricKey || '';
+        const value = form.querySelector('input[type="date"]').value || '';
+        if (!metricKey) return;
+
+        const res = await fetch(`/api/update?key=${encodeURIComponent(key)}`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            sf_id: sfId,
+            sig,
+            metric_key: metricKey,
+            value,
+            adjust_following: adjustFollowing ? 'yes' : 'no'
+          })
+        });
+
+        const payload = await res.json().catch(() => ({}));
+        if (!res.ok) {
+          throw new Error(payload.detail || payload.error || `Update failed (${res.status})`);
+        }
+      }
+
+      async function onDateChange(inputEl) {
+        const form = inputEl.closest('form.date-edit');
+        const row = inputEl.closest('.date-inline');
+        const choice = form ? form.querySelector('.acd-choice') : null;
+        if (!form || !row) return;
+
+        const isAcd = (form.dataset.dateType || '').toLowerCase() === 'acd';
+        if (isAcd && choice) {
+          choice.classList.add('show');
+          return;
+        }
+
+        try {
+          await sendUpdate(form, true);
+          location.reload();
+        } catch (err) {
+          alert(err.message || 'Unable to save date.');
+          hideRowEditor(row.id);
+        }
+      }
+
+      async function submitAcdChoice(buttonEl, adjustFollowing) {
+        const form = buttonEl.closest('form.date-edit');
+        const row = form ? form.querySelector('.date-inline') : null;
+        if (!form || !row) return;
+        try {
+          await sendUpdate(form, adjustFollowing);
+          location.reload();
+        } catch (err) {
+          alert(err.message || 'Unable to save date.');
+          hideRowEditor(row.id);
+          closeChoices();
+        }
+      }
+
+      function onDateKeydown(evt, rowId) {
+        if (evt.key === 'Escape') {
+          evt.preventDefault();
+          hideRowEditor(rowId);
+          closeChoices();
+        }
+      }
+
+      function makeDateField(section, idx, type, field) {
+        const id = `${section}-${idx}-${type}`;
+        const metricKey = field.metric_key || '';
+        const valueLabel = field.value || 'Not set';
+        const inputValue = field.input_value || '';
+        const editable = !!field.editable && canEdit;
+
+        if (!editable) {
+          return `<p><span class="label">${type.toUpperCase()}:</span> <span class="value">${esc(valueLabel)}</span></p>`;
+        }
+
+        const acdChoice = type === 'acd'
+          ? `<div class="acd-choice">
+              <span class="acd-choice-label">Apply this date to following timeline?</span>
+              <button type="button" onclick="submitAcdChoice(this, true)">Adjust following ECDs</button>
+              <button type="button" class="ghost" onclick="submitAcdChoice(this, false)">Keep following ECDs</button>
+            </div>`
+          : '';
+
+        return `<form class="date-edit" data-metric-key="${esc(metricKey)}" data-date-type="${type}">
+          <span class="label">${type.toUpperCase()}:</span>
+          <div class="date-inline" id="${id}">
+            <span class="date-value-btn" onclick="openDateEditor('${id}')">${esc(valueLabel)}</span>
+            <span class="date-editor">
+              <input type="date" value="${esc(inputValue)}" onchange="onDateChange(this)" onkeydown="onDateKeydown(event, '${id}')" />
+            </span>
+          </div>
+          ${acdChoice}
+        </form>`;
+      }
+
+      function renderStep(section, name, step, idx) {
+        const extras = (step.extras || [])
+          .map((x) => `<p><span class="label">${esc(x.label)}:</span> <span class="value">${esc(x.value || 'Not set')}</span></p>`)
+          .join('');
+
+        return `<section class="step-card">
+          <h3>${esc(name)}</h3>
+          <div class="step-fields">
+            <div class="step-row two-col">
+              <p><span class="label">Status:</span> <span class="value status-pill ${esc(step.status_class || 'status-pill-neutral')}">${esc(step.status || 'Not set')}</span></p>
+              <p><span class="label">Owner:</span> <span class="value">${esc(step.owner || step.Owner || 'Not assigned')}</span></p>
+            </div>
+            <div class="step-row two-col">
+              ${makeDateField(section, idx, 'ecd', step.ecd || {})}
+              ${makeDateField(section, idx, 'acd', step.acd || {})}
+            </div>
+            ${extras}
+          </div>
+        </section>`;
+      }
+
+      async function loadPage() {
+        if (!sfId || !sig) {
           document.body.innerHTML = '<main class="page"><section class="panel"><h2>Missing sf_id or sig.</h2></section></main>';
           return;
         }
 
-        const res = await fetch(`/api/status?sf_id=${encodeURIComponent(sf)}&sig=${encodeURIComponent(sig)}`);
-        const data = await res.json();
+        const res = await fetch(`/api/status?sf_id=${encodeURIComponent(sfId)}&sig=${encodeURIComponent(sig)}`);
+        const data = await res.json().catch(() => ({}));
+
         if (!res.ok) {
           document.body.innerHTML = `<main class="page"><section class="panel"><h2>Load failed</h2><p>${esc(data.detail || data.error || res.status)}</p></section></main>`;
           return;
         }
 
-        document.getElementById('title').textContent = data.task_name || 'Project Status';
-
         if (mode === 'admin') {
-          const menu = document.getElementById('adminMenu');
-          menu.style.display = '';
+          document.getElementById('adminMenu').style.display = '';
           document.getElementById('backAdmin').href = `/admin/projects?key=${encodeURIComponent(key)}`;
+          if (canEdit) {
+            const vt = document.getElementById('viewToggle');
+            vt.style.display = '';
+            vt.href = `/status?sf_id=${encodeURIComponent(sfId)}&sig=${encodeURIComponent(sig)}`;
+          }
         }
 
+        document.getElementById('title').textContent = data.task_name || 'Project Status';
+
         const dashboard = data.dashboard || {};
-        const pd = dashboard.project_details || {};
-        document.getElementById('projectDetails').innerHTML = Object.entries(pd)
-          .map(([label, value]) => `<article class="detail-item"><p class="label">${detailIcon(label)}${esc(label)}</p><p class="value">${esc(value || 'Not set')}</p></article>`)
+        const details = dashboard.project_details || {};
+        document.getElementById('projectDetails').innerHTML = Object.entries(details)
+          .map(([label, value]) => `<article class="detail-item"><p class="label">${iconForLabel(label)}${esc(label)}</p><p class="value">${esc(value || 'Not set')}</p></article>`)
           .join('');
 
         const sra = dashboard.sra_steps || {};
-        const nva = dashboard.nva_steps || {};
-
         if (dashboard.show_sra && Object.keys(sra).length) {
           document.getElementById('sraPanel').style.display = '';
-          document.getElementById('sraSteps').innerHTML = Object.entries(sra).map(([k, v]) => renderStep(k, v)).join('');
+          document.getElementById('sraSteps').innerHTML = Object.entries(sra).map(([name, step], idx) => renderStep('sra', name, step, idx)).join('');
         }
 
+        const nva = dashboard.nva_steps || {};
         if (dashboard.show_nva && Object.keys(nva).length) {
           document.getElementById('nvaPanel').style.display = '';
-          document.getElementById('nvaSteps').innerHTML = Object.entries(nva).map(([k, v]) => renderStep(k, v)).join('');
+          document.getElementById('nvaSteps').innerHTML = Object.entries(nva).map(([name, step], idx) => renderStep('nva', name, step, idx)).join('');
         }
 
+        const extra = dashboard.extra_metrics || {};
+        if (Object.keys(extra).length) {
+          document.getElementById('extraPanel').style.display = '';
+          document.getElementById('extraMetrics').innerHTML = Object.entries(extra)
+            .map(([label, value]) => `<article class="extra-item"><p class="label">${esc(label)}</p><p class="value">${esc(value || 'Not set')}</p></article>`)
+            .join('');
+        }
+
+        const taskUrl = data.task_url ? `<p><a href="${esc(data.task_url)}" target="_blank" rel="noreferrer">Open task in ClickUp</a></p>` : '';
         document.getElementById('meta').innerHTML = `
           <p>SF ID: ${esc(data.sf_id)}</p>
           <p>Last updated in ClickUp: ${esc(data.source_updated_at || 'Unknown')}</p>
-          <p><a href="${esc(data.task_url || '#')}" target="_blank" rel="noreferrer">Open task in ClickUp</a></p>`;
+          <p>Last synced to dashboard: ${esc(data.synced_at || 'Unknown')}</p>
+          ${taskUrl}
+        `;
       }
 
-      load().catch((err) => {
-        document.body.innerHTML = `<main class="page"><section class="panel"><h2>Load failed</h2><p>${esc(err && err.message ? err.message : err)}</p></section></main>`;
+      document.addEventListener('click', (evt) => {
+        const insideDate = evt.target.closest('.date-inline');
+        const insideChoice = evt.target.closest('.acd-choice');
+        const insideBtn = evt.target.closest('.date-value-btn');
+        if (!insideDate && !insideChoice && !insideBtn) {
+          closeDateEditors();
+          closeChoices();
+        }
+      });
+
+      loadPage().catch((err) => {
+        document.body.innerHTML = `<main class="page"><section class="panel"><h2>Load failed</h2><p>${esc(err.message || err)}</p></section></main>`;
       });
     </script>
   </body>
